...
        return iv
    }()
    
    let startButton: UIButton = {
       let btn = UIButton()
            btn.translatesAutoresizingMaskIntoConstraints = false
            btn.setTitle("Let's Begin", for: .normal)
            btn.setTitleColor(.white, for: .normal)
            btn.backgroundColor = UIColor(named: "OliveGreen")
            btn.layer.cornerRadius = 8
            btn.addTarget(self, action: #selector(handleStart), for: .touchUpInside)
        return btn
    }()


    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "introPage"
        viewSetup()
        
    }
    
    @objc func handleStart(){
        let controller = MainViewController()
...
