...
    var searchTopConstraint: NSLayoutConstraint!
    
    let viewModel = RecipesViewModel();
    
    let searchTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Enter your search phrases here"
        textField.borderStyle = .roundedRect
        textField.translatesAutoresizingMaskIntoConstraints = false
        
        return textField
    }()
    
    let searchButton: UIButton = {
        let btn = UIButton(type: .system)
        btn.setTitle("Search", for: .normal)
        btn.translatesAutoresizingMaskIntoConstraints = false
        btn.backgroundColor = .oliveGreen
        btn.layer.cornerRadius = 8
        btn.tintColor = .white
        return btn
    }()
...
